Move 'Copy' button to avoid overlap with 'Edit Block' button.

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,4 @@
-/*
-
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
-
-If your plugin does not need CSS, delete this file.
-
-*/
+div.block-language-include button.copy-code-button {
+    margin-right: 38px;
+    margin-top: 4px;
+}
